# Epitech

./: README.md
First-Year-Projects/: README.md
Second-Year-Projects/YEP/Indie_Studio/: CMakeLists.txt  README.md
Second-Year-Projects/YEP/Indie_Studio/assets/cs-go-bomb/source/: cs_go bomb.mtl
Second-Year-Projects/YEP/Indie_Studio/assets/map/: map.txt
Second-Year-Projects/YEP/Indie_Studio/backup/: score.txt
Second-Year-Projects/YEP/Indie_Studio/config/: bindings.json  menu.json  pause.json  scores.json  victory.json
Second-Year-Projects/YEP/Indie_Studio/includes/: Best_Scores.hpp  Bombe.hpp  Button.hpp  Error.hpp  GameEngine.hpp  LoadGame.hpp  LocalMultiplayer.hpp  Parser.hpp  Particule.hpp  Player.hpp  PlayerSettings.hpp  SaveGame.hpp  enum.hpp  game.hpp
Second-Year-Projects/YEP/Indie_Studio/includes/controllers/: Audio.hpp  Core.hpp  Models.hpp  Shapes.hpp  Text.hpp  Textures.hpp
Second-Year-Projects/YEP/Indie_Studio/includes/interfaces/: IDisplay.hpp  IInfo.hpp  Menu.hpp
Second-Year-Projects/YEP/Indie_Studio/includes/map_creation/: map.hpp
Second-Year-Projects/YEP/Indie_Studio/includes/pages/: AnimScreen.hpp  AskUser.hpp  LoadScreen.hpp  MainMenu.hpp  Pause.hpp  Score.hpp  SecondMenu.hpp  Setting.hpp  VictoryScreen.hpp
Second-Year-Projects/YEP/Indie_Studio/modules/: Findraylib.cmake
Second-Year-Projects/YEP/Indie_Studio/source/: Error.cpp  main.cpp
Second-Year-Projects/YEP/Indie_Studio/source/LocalMultiplayer/: LocalMultiplayer.cpp
Second-Year-Projects/YEP/Indie_Studio/source/PlayerSettings/: PlayerSettings.cpp
Second-Year-Projects/YEP/Indie_Studio/source/bombe/: bombe.cpp
Second-Year-Projects/YEP/Indie_Studio/source/controllers/: audio.cpp  core.cpp  models.cpp  shapes.cpp  text.cpp  textures.cpp
Second-Year-Projects/YEP/Indie_Studio/source/game/: init_game.cpp
Second-Year-Projects/YEP/Indie_Studio/source/load/: loadGame.cpp
Second-Year-Projects/YEP/Indie_Studio/source/map_creation/: map.cpp
Second-Year-Projects/YEP/Indie_Studio/source/pages/GameEngine/: gameEngine.cpp
Second-Year-Projects/YEP/Indie_Studio/source/pages/Victory/: victory.cpp
Second-Year-Projects/YEP/Indie_Studio/source/pages/askUser/: askUser.cpp
Second-Year-Projects/YEP/Indie_Studio/source/pages/menu/: AnimScreen.cpp  LoadScreen.cpp  menu.cpp  secondMenu.cpp
Second-Year-Projects/YEP/Indie_Studio/source/pages/pause/: pause.cpp
Second-Year-Projects/YEP/Indie_Studio/source/parser/: parser.cpp
Second-Year-Projects/YEP/Indie_Studio/source/player/: player.cpp
Second-Year-Projects/YEP/Indie_Studio/source/save/: saveGame.cpp
Second-Year-Projects/YEP/Indie_Studio/source/score/: score.cpp
Second-Year-Projects/YEP/Indie_Studio/source/utils/: create_button.cpp
(+1235 files in other folders)
